// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches snapshot 1`] = `
<div
  class="sc-dnqmqq hReGkQ"
>
  <header>
    <div
      class="sc-bdVaJa hhHNSr"
    >
      <div
        class="sc-bwzfXH bsmKCX"
      >
        <a
          data-testid="menu-logo"
          href="/"
        >
          <svg
            class="sc-htpNat fMTaMq"
            height="1220"
            title="source"
            viewBox="0 0 708 610"
            width="1416"
          >
            <path
              d="M301.786 163.964l53.441 95.207-150.893 259.171H707.31L657.013 610H53.441z"
              fill="#c1c1c1"
              fill-rule="evenodd"
            />
            <path
              d="M0 518.342L53.441 610l248.345-439.327 150.893 264.8h100.6L304.929 0z"
              fill="#d0d0d0"
              fill-rule="evenodd"
            />
            <path
              d="M251.64 436.166l-47.84 82.176H708L411.122.54H304.24l247.269 432.465z"
              fill="#b6b6b6"
              fill-rule="evenodd"
            />
          </svg>
        </a>
        <button
          class="sc-bxivhb cGjZfZ"
          data-testid="menu-button"
          type="button"
        >
          <div
            class="sc-ifAKCX ewsDuX"
          >
            <div
              class="sc-EHOje gxQiPh"
            />
            <div
              class="sc-bZQynM hrtvGh"
            />
          </div>
        </button>
      </div>
      <div
        class="sc-gzVnrw jmEgEA"
        data-testid="menu-wrapper"
      >
        <div>
          <a
            class="sc-htoDjs kVKwYX"
            data-testid="menu-item-target-/"
            href="/"
          >
            Home
          </a>
          <a
            class="sc-htoDjs cWKFc"
            data-testid="menu-item-target-/projects"
            href="/projects"
          >
            Projects
          </a>
          <a
            class="sc-htoDjs cWKFc"
            data-testid="menu-item-target-/ai"
            href="/ai"
          >
            AI Experiments
          </a>
        </div>
        <div>
          <a
            class="sc-htoDjs cWKFc"
            data-testid="menu-item-target-/static/cv_cosmin_serdean.pdf"
            href="/static/cv_cosmin_serdean.pdf"
            rel="noopener noreferrer"
            target="_blank"
          >
            CV
          </a>
          <a
            class="sc-htoDjs cWKFc"
            data-testid="menu-item-target-https://github.com/c0z0"
            href="https://github.com/c0z0"
            rel="noopener noreferrer"
            target="_blank"
          >
            GitHub
          </a>
          <a
            class="sc-htoDjs ehrQze"
            data-testid="menu-item-target-mailto:cosmoserdean@gmail.com"
            href="mailto:cosmoserdean@gmail.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            Email
          </a>
        </div>
      </div>
    </div>
  </header>
  <div
    class="sc-iwsKbI ceQLln"
  >
    test content
  </div>
  <style>
    
        body {
          background: none;
        }
      
  </style>
</div>
`;

exports[`Matches snapshot 2`] = `
<div
  class="sc-dnqmqq eqvaJb"
>
  <header>
    <div
      class="sc-bdVaJa hhHNSr"
    >
      <div
        class="sc-bwzfXH bsmKCX"
      >
        <a
          data-testid="menu-logo"
          href="/"
        >
          <svg
            class="sc-htpNat fMTaMq"
            height="1220"
            title="source"
            viewBox="0 0 708 610"
            width="1416"
          >
            <path
              d="M301.786 163.964l53.441 95.207-150.893 259.171H707.31L657.013 610H53.441z"
              fill="#c1c1c1"
              fill-rule="evenodd"
            />
            <path
              d="M0 518.342L53.441 610l248.345-439.327 150.893 264.8h100.6L304.929 0z"
              fill="#d0d0d0"
              fill-rule="evenodd"
            />
            <path
              d="M251.64 436.166l-47.84 82.176H708L411.122.54H304.24l247.269 432.465z"
              fill="#b6b6b6"
              fill-rule="evenodd"
            />
          </svg>
        </a>
        <button
          class="sc-bxivhb cGjZfZ"
          data-testid="menu-button"
          type="button"
        >
          <div
            class="sc-ifAKCX bTSODv"
          >
            <div
              class="sc-EHOje gxQiPh"
            />
            <div
              class="sc-bZQynM hrtvGh"
            />
          </div>
        </button>
      </div>
      <div
        class="sc-gzVnrw jmEgEA"
        data-testid="menu-wrapper"
      >
        <div>
          <a
            class="sc-htoDjs hKRjuU"
            data-testid="menu-item-target-/"
            href="/"
          >
            Home
          </a>
          <a
            class="sc-htoDjs elorzL"
            data-testid="menu-item-target-/projects"
            href="/projects"
          >
            Projects
          </a>
          <a
            class="sc-htoDjs elorzL"
            data-testid="menu-item-target-/ai"
            href="/ai"
          >
            AI Experiments
          </a>
        </div>
        <div>
          <a
            class="sc-htoDjs elorzL"
            data-testid="menu-item-target-/static/cv_cosmin_serdean.pdf"
            href="/static/cv_cosmin_serdean.pdf"
            rel="noopener noreferrer"
            target="_blank"
          >
            CV
          </a>
          <a
            class="sc-htoDjs elorzL"
            data-testid="menu-item-target-https://github.com/c0z0"
            href="https://github.com/c0z0"
            rel="noopener noreferrer"
            target="_blank"
          >
            GitHub
          </a>
          <a
            class="sc-htoDjs hSKCPe"
            data-testid="menu-item-target-mailto:cosmoserdean@gmail.com"
            href="mailto:cosmoserdean@gmail.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            Email
          </a>
        </div>
      </div>
    </div>
  </header>
  <div
    class="sc-iwsKbI ceQLln"
  >
    test content
  </div>
  <style>
    
        body {
          background: black;
        }
      
  </style>
</div>
`;
